--- a/src/index.css
+++ b/src/index.css
@@ -16,12 +16,14 @@
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  font-size: 14px;
 }
 
 a {
   font-weight: 500;
-  color: #646cff;
+  color: #aeb2b7;
   text-decoration: inherit;
+  /* padding: 15px; */
 }
 a:hover {
   color: #535bf2;
@@ -51,7 +53,6 @@ h1 {
 }
 
 button {
-  border-radius: 8px;
   border: 1px solid transparent;
   padding: 0.6em 1.2em;
   font-size: 1em;
