--- a/src/assets/components/Sidebar.module.css
+++ b/src/assets/components/Sidebar.module.css
@@ -29,7 +29,6 @@
 .sideBar {
   top: 50%;
   transition: transform .9s ease;
-  transition-delay: .7s;
   transform-origin: left center;
 }
 
@@ -41,16 +40,23 @@
   top: calc(50% + 6px);
 }
 
+.sidebarIsNotOpen .sideBar:first-child, .sidebarIsNotOpen .sideBar:nth-child(3){
+  transition-delay: .9s;
+}
+
 .sidebarIsOpen .sideBar:first-child,
 .sidebarIsOpen .sideBar:nth-child(3) {
   transform: translateY(-50%) scaleX(0);
+  transition-delay: .4s;
 }
 
 .sidebarIsOpen .curve {
   transform: translateY(-50%) rotate(45deg) scale(1);
+  transition-delay: 1.2s;
 }
 
 .sidebarIsOpen .curve:last-child {
   transform: translateY(50%) rotate(-45deg) scale(1);
+  transition-delay: 1.2s;
 }
 
