--- a/src/index.css
+++ b/src/index.css
@@ -71,6 +71,10 @@ button:focus-visible {
   outline: 4px auto -webkit-focus-ring-color;
 }
 
+.backgroundColor{
+  background-color: #f1f2f7;
+}
+
 @media (prefers-color-scheme: light) {
   :root {
     color: #213547;
